[package]
name = "chip-8"
version = "0.1.0"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.sdl2]
version = "*"
default-features = true
features = ["mixer","ttf"]

[dependencies.sdl2-sys]
version = "*"
default-features = true

[dependencies.rand]
version = "*"
default-features = true